--- a/templates/show_future_reservations.html.jinja2
+++ b/templates/show_future_reservations.html.jinja2
@@ -1,6 +1,7 @@
 {%  extends 'structure.html.jinja2' %}
 
 {% block content %}
+    <div id="future">
                 <!-- Tableau de réservations -->
                 <table class="table table-hover text-center mt-2">
                     <thead>
@@ -40,5 +41,6 @@
 
                     </tbody>
                 </table>
+    </div>
 
 {% endblock %}
