--- a/templates/structure.html.jinja2
+++ b/templates/structure.html.jinja2
@@ -1,13 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-{% macro display_pack_badge(pack) %}
-    {% if pack%}
-        <span class="badge badge-light">Formule</span>
-    {% else %}
-        <span class="badge badge-info">Sandwich seul</span>
-    {% endif %}
-{% endmacro %}
 
 {% macro set_active_if(variable, name) %}
     {% if variable == name %} active{% endif %}
@@ -53,7 +46,7 @@
                aria-controls="v-pills-settings" aria-selected="false">Produits</a>
         </div>
     </div>
-    <div class="col-9">
+    <div id="table-content" class="col-9">
         {% block content %}
         {% endblock %}
     </div>
@@ -62,8 +55,7 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -71,6 +63,14 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
+<script src="{{ url_for("static", filename="script/script.js") }}"></script>
+    <script>
+        $(function () {
+            set_active_page("{{ active_page }}")
+            refresh("{{ active_page }}")
+        })
+    </script>
 </body>
 
 </html>
