--- a/templates/future_reservations.html.jinja2
+++ b/templates/future_reservations.html.jinja2
@@ -1,8 +1,11 @@
-{%  extends 'structure.html.jinja2' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+</head>
 
-{% block content %}
-    <div id="future">
-                <!-- Tableau de réservations -->
+<body>
+<!-- Tableau de réservations -->
                 <table class="table table-hover text-center mt-2">
                     <thead>
                         <tr>
@@ -41,6 +44,10 @@
 
                     </tbody>
                 </table>
-    </div>
 
-{% endblock %}
+</body>
+</html>
+
+
+
+
