--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,3 +41,8 @@ a{
     background-color: #ecb739;
     border-color: #ecb739;
 }
+
+.image-product-management{
+    max-width: 100px;
+    max-height: 70px;
+}
